despliegue/produccion/prod-ingress-service-transversal.yml
kind: Service
apiVersion: v1
metadata:
  name: svc-mf-manage-migrations
  namespace: ingress-transversal
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ExternalName
  sessionAffinity: None
  externalName: mf-manage-migrations.pruebas.svc.cluster.local
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-mf-manage-migrations
  namespace: ingress-transversal
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/referrer-policy: strict-origin
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - mf-manage-migrations.telefonicawebsites.co
      secretName: ingress-tls-csi
  rules:
    - host: mf-manage-migrations.telefonicawebsites.co
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-mf-manage-migrations
                port:
                  number: 8080
